--- a/mdx-satellite-paper/paper.bib
+++ b/mdx-satellite-paper/paper.bib
@@ -138,3 +138,12 @@ eprint = {https://doi.org/10.1121/1.4986647}
   year         = {2019},
   doi          = {10.5281/zenodo.3338373},
 }
+
+@misc{plumbley2,
+      title={Multi-Band Multi-Resolution Fully Convolutional Neural Networks for Singing Voice Separation}, 
+      author={Emad M. Grais and Fei Zhao and Mark D. Plumbley},
+      year={2019},
+      eprint={1910.09266},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
