Start automating Python plots for NSGT

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -385,20 +385,24 @@ Figures \ref{fig:bunchansgts1} and \ref{fig:bunchansgts2} show several different
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[NSGT, Constant-Q scale, 100 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_cqlog_100.png}}\\
-	\subfloat[NSGT, Constant-Q scale, 500 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_cqlog_500.png}}\\
-	\subfloat[NSGT, Variable-Q scale, 100 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_vqlog_100.png}}\\
-	\subfloat[NSGT, Variable-Q scale, 500 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_vqlog_500.png}}
+	\subfloat[NSGT, Constant-Q scale, 100 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_cqlog_100.png}}
+	\hspace{0.1em}
+	\subfloat[NSGT, Constant-Q scale, 500 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_cqlog_500.png}}\\
+	\subfloat[NSGT, Variable-Q scale, 100 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_vqlog_100.png}}
+	\hspace{0.1em}
+	\subfloat[NSGT, Variable-Q scale, 500 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_vqlog_500.png}}
 	\caption{Spectrograms of the glockenspiel signal using the NSGT with a low (100 bins) and high (500 bins) frequency resolution and the constant- and Variable-Q scales. The frequency range for each shown scale is 20--22050 Hz, and there is an offset of 15 Hz per band for the Variable-Q scale}
 	\label{fig:bunchansgts1}
 \end{figure}
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[NSGT, mel scale, 100 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_mel_100.png}}\\
-	\subfloat[NSGT, mel scale, 500 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_mel_500.png}}\\
-	\subfloat[NSGT, Bark scale, 100 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_bark_100.png}}\\
-	\subfloat[NSGT, Bark scale, 500 bins]{\includegraphics[width=\textwidth]{./images-gspi/gspi_nsgt_bark_500.png}}\\
+	\subfloat[NSGT, mel scale, 100 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_mel_100.png}}
+	\hspace{0.1em}
+	\subfloat[NSGT, mel scale, 500 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_mel_500.png}}\\
+	\subfloat[NSGT, Bark scale, 100 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_bark_100.png}}
+	\hspace{0.1em}
+	\subfloat[NSGT, Bark scale, 500 bins]{\includegraphics[width=0.475\textwidth]{./images-gspi/gspi_nsgt_bark_500.png}}\\
 	\caption{Spectrograms of the glockenspiel signal using the NSGT with a low (100 bins) and high (500 bins) frequency resolution and the mel and Bark psychoacoustic scales. The frequency range for each shown scale is 20--22050 Hz}
 	\label{fig:bunchansgts2}
 \end{figure}
