--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -162,8 +162,9 @@ The sliCQT chosen by one run of the script that produced the best median SDR use
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Good sliCQT -- Bark, 262 bins, 32.9--22050 Hz]{\includegraphics[width=\textwidth]{./images-gspi/slicqt_good.png}}\\
-	\subfloat[Bad sliCQT -- Constant-Q/log, 142 bins, 129.7--22050 Hz]{\includegraphics[width=\textwidth]{./images-gspi/slicqt_bad.png}}
+	\subfloat[Good sliCQT -- Bark, 262 bins, 32.9--22050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_good.png}}
+	\hspace{0.1em}
+	\subfloat[Bad sliCQT -- Constant-Q/log, 142 bins, 129.7--22050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_bad.png}}
 	\caption{sliCQTs from the MPI oracle hyperparameter search}
 	\label{fig:bipolarslicqs}
 \end{figure}
