--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1795,3 +1795,9 @@ title={Audio source separation with time-frequency velocities},
 year={2014},
 pages={1-6},
 doi={10.1109/MLSP.2014.6958893}}
+
+@article{mdx21,
+author = {Mitsufuji, Yuki and Fabbro, Giorgio and Uhlich, Stefan and Stöter, Fabian-Robert},
+year = {2021},
+title = {Music Demixing Challenge at ISMIR 2021}
+}
