Split out proposal citations to clean them up

--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -14,7 +14,7 @@
 \renewcommand{\textfraction}{0.1}
 \renewcommand{\floatpagefraction}{0.75}
 \usepackage[backend=biber,authordate,annotation,url=false,doi=false]{biblatex-chicago}
-\addbibresource{citations.bib}
+\addbibresource{proposal_citations.bib}
 \input{variables.tex}
 
 \newenvironment{tight_enumerate}{
