Proposal feels good

--- a/latex/proposal_citations.bib
+++ b/latex/proposal_citations.bib
@@ -4,6 +4,7 @@ year = {2018},
 title = {Musical source separation: an introduction},
 volume = {36},
 number = {1},
+pages = {31--40},
 journal = {IEEE Signal Processing Magazine},
 doi = {10.1109/MSP.2018.2874719}
 }
@@ -39,7 +40,8 @@ doi={10.1109/TASL.2012.2234114}}
 author = {D{\"o}rfler, Monika},
 year = {2002},
 title = {Gabor analysis for a class of signals called music},
-url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
+url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf},
+school = {NuHAG, University of Vienna},
 }
 
 @article{balazs,
@@ -60,6 +62,7 @@ url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
   journal={Journal of the Acoustical Society of America},
   year={1991},
   volume={89},
+  number={1},
   pages={425--434},
   url={https://www.ee.columbia.edu/~dpwe/papers/Brown91-cqt.pdf}
 }
@@ -67,10 +70,9 @@ url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
 @article{sisec2018,
       title={The 2018 signal separation evaluation campaign}, 
       author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
+      journal={LVA/ICA: Latent Variable Analysis and Signal Separation},
       year={2018},
-      eprint={1804.06267},
-      archivePrefix={arXiv},
-      primaryClass={eess.AS}
+      pages={293--305},
 }
 
 @article{umx,
@@ -106,14 +108,14 @@ url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
   number={8},
   pages={1307--1335},
   doi={10.1109/TASLP.2018.2825440},
-  ISSN={2329-9290},
 }
 
-@article{driedger,
-author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
-year = {2014},
-title = {Extending harmonic-percussive separation of audio signals},
-url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
+@inproceedings{driedger,
+  author    = {Jonathan Driedger and Meinard M{\"u}ller and Sascha Disch},
+  title     = {Extending harmonic-percussive separation of audio signals},
+  booktitle = {Proceedings of the 15th International Conference on Music Information Retrieval ({ISMIR})},
+  year      = {2014},
+  pages     = {611--616},
 }
 
 @article{fitzgerald2,
@@ -151,6 +153,7 @@ year = {2006},
 pages = {1462--1469},
 title = {Performance measurement in blind audio source separation},
 volume = {14},
-journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
+number = {4},
+journal = {IEEE Transactions on Audio, Speech, and Language Processing},
 doi = {10.1109/TSA.2005.858005}
 }
